[package]
name = "cruxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_path_to_error = "0.1.8"

[[bin]]
name = "basic"
test = false
bench = false

[[bin]]
name = "baseball"
test = false
bench = false
