[package]
name = "cruxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.1"
serde = { version = "1.0.147", features = ["derive"] }
serde-xml-rs = { git = "https://github.com/burleight/serde-xml-rs", branch = "serialize-vec-struct"}
serde_path_to_error = "0.1.8"

[lib]
name = "tcx"
path = "src/tcx.rs"

[[bin]]
name = "merge"
test = false
